// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TabGroup /> > Centered story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r4:"
          id=":r5:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r5:-Tab-Title-1"
      id=":r4:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > Default story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r0:"
          id=":r1:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r1:-Tab-Title-1"
      id=":r0:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > InverseVariant story renders snapshot 1`] = `
<div
  class="p-spacing-size-half"
>
  <div
    class="_tabs_5bfe90"
  >
    <div
      class="_tabs__header_5bfe90"
    >
      <ul
        class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--variant-inverse_5bfe90"
        role="tablist"
      >
        <li
          class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="true"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-1"
            role="tab"
            tabindex="0"
          >
            Tab Title 1
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
        <li
          class="_tabs__item_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-2"
            role="tab"
            tabindex="-1"
          >
            Tab Title 2
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
        <li
          class="_tabs__item_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-3"
            role="tab"
            tabindex="-1"
          >
            Tab Title 3
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
        <li
          class="_tabs__item_5bfe90"
          role="presentation"
        >
          <a
            aria-controls=":r2:"
            aria-selected="false"
            class="_tabs__link_5bfe90"
            href="#:r2:"
            id=":r3:-Tab-Title-4"
            role="tab"
            tabindex="-1"
          >
            Tab Title 4
            <div
              aria-hidden="true"
              class="_tab__highlight_5bfe90"
            />
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        aria-hidden="false"
        aria-labelledby=":r3:-Tab-Title-1"
        id=":r2:"
        role="tabpanel"
      >
        <div
          class="text-utility-inverse max-w-[576px]"
        >
          <h3
            class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
          >
            Tab 1
          </h3>
          <p
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > TabWidthFull story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90 _tabs--width-full_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r6:"
          id=":r7:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r7:-Tab-Title-1"
      id=":r6:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > WithTabIcons story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:r8:"
          id=":r9:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _tab__icon_5bfe90"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
            />
          </svg>
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r8:"
          id=":r9:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _tab__icon_5bfe90"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
            />
          </svg>
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:r8:"
          id=":r9:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_779da8 _tab__icon_5bfe90"
            fill="currentColor"
            height="16px"
            style="--icon-size: 16px;"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
            />
          </svg>
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r9:-Tab-Title-1"
      id=":r8:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> > WithTabIllustrations story renders snapshot 1`] = `
<div
  class="_tabs_5bfe90"
>
  <div
    class="_tabs__header_5bfe90"
  >
    <ul
      class="_tabs__list_5bfe90 _tabs--has-divider_5bfe90 _tabs__list--align-center_5bfe90 _tabs__list--variant-default_5bfe90"
      role="tablist"
    >
      <li
        class="_tabs__item_5bfe90 _eds-is-active_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="true"
          class="_tabs__link_5bfe90"
          href="#:ra:"
          id=":rb:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <div
            class="_tab__illustration_5bfe90"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 1
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:ra:"
          id=":rb:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <div
            class="_tab__illustration_5bfe90"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 2
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
      <li
        class="_tabs__item_5bfe90"
        role="presentation"
      >
        <a
          aria-controls=":ra:"
          aria-selected="false"
          class="_tabs__link_5bfe90"
          href="#:ra:"
          id=":rb:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <div
            class="_tab__illustration_5bfe90"
          >
            <div
              class="h-spacing-size-6 w-spacing-size-6 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 3
          <div
            aria-hidden="true"
            class="_tab__highlight_5bfe90"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":rb:-Tab-Title-1"
      id=":ra:"
      role="tabpanel"
    >
      <div
        class="max-w-[576px]"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 mb-spacing-size-3"
        >
          Tab 1
        </h3>
        <p
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;
